--- a/index.html
+++ b/index.html
@@ -48,14 +48,34 @@
 
         <!-- Page Content  -->
         <div id="content" class="top-margin">
-
+            
             <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
                 <div class="container-fluid">
+                     <div class="d-lg-none" id="menu-container">
+                       <div id="menu-wrapper">
+                          <div id="hamburger-menu"><span></span><span></span><span></span></div>
+                          <!-- hamburger-menu -->
+                       </div>
+                       <!-- menu-wrapper -->
+                       <ul class="menu-list accordion">
+                          <li id="nav1" class="menu-size menu-border"> 
+                              <a class="menu-link" href="#">Home</a>
+                          </li>
+                          <!-- menu-submenu accordon-content-->
+                          <li id="nav2" class="menu-size menu-border"> 
+                             <a class="menu-link" href="#aePatchNotes">AE Patch Notes</a>
+                          </li>
+                          <!-- accordion-toggle -->
+                          <!-- menu-submenu accordon-content-->
+                               <li id="nav3" class="menu-size"> 
+                             <a class="menu-link" href="#vipGrabBags">Vip Grab Bags</a>
+                          </li>
+                          <!-- menu-submenu accordon-content-->
+                       </ul>
+                       <!-- menu-list accordion-->
+                    </div>
+                    <!-- menu-container -->
 
-                    <button type="button" id="sidebarCollapse" class="btn btn-dark">
-                        <i class="fas fa-align-left"></i>
-                        <span>Toggle Sidebar</span>
-                    </button>
                     <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fas fa-align-justify"></i>
                     </button>
@@ -1006,6 +1026,8 @@
 
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <!-- jQuery CDN - Hamburger Menu -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <!-- Popper.JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <!-- Bootstrap JS -->
