--- a/quest.html
+++ b/quest.html
@@ -93,10 +93,42 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
                 <div class="container-fluid">
 
-                    <button type="button" id="sidebarCollapse" class="btn btn-dark">
-                        <i class="fas fa-align-left"></i>
-                        <span>Toggle Sidebar</span>
-                    </button>
+                    <div class="d-lg-none" id="menu-container">
+                        <div id="menu-wrapper">
+                           <div id="hamburger-menu"><span></span><span></span><span></span></div>
+                           <!-- hamburger-menu -->
+                        </div>
+                        <!-- menu-wrapper -->
+                        <ul class="menu-list accordion">
+                           <li id="nav1" class="menu-size"> 
+                               <a class="menu-link" href="index.html">Home</a>
+                           </li>
+                           <!-- menu-submenu accordon-content-->
+                           <li id="nav2" class="toggle accordion-toggle"> 
+                              <span class="icon-plus"></span>
+                              <a class="menu-link" href="#">Quest</a>
+                           </li>
+                           <!-- accordion-toggle -->
+                           <ul class="menu-submenu accordion-content">
+                              <li><a href="#valinorQuest">Valinor Quest</a></li>
+                              <li><a class="head" href="#silvestValley">Silvest Valley</a></li>
+                              <li><a class="head" href="#krythan">Krythan</a></li>
+                              <li><a class="head" href="#darkwoods">Darkwoods</a></li>
+                              <li><a class="head" href="#battlePlains">Battle Plains</a></li>
+                              <li><a class="head" href="#blackSwamp">Black Swamp</a></li>
+                              <li><a class="head" href="#highlands">Highlands</a></li>
+                              <li><a class="head" href="#westernIsles">Western Isles</a></li>
+                              <li><a class="head" href="#valleyoftheGiants">Valley of the Giants</a></li>
+                              <li><a class="head" href="#heartwoodCoast">Heartwood Coast</a></li>
+                              <li><a class="head" href="#tundria">Tundria</a></li>
+                              <li><a class="head" href="#sandsofCreation">Sands of Creation</a></li>
+                              <li><a class="head" href="#breakwater">Breakwater</a></li>
+                              <li><a class="head" href="#brokenFinger">Broken Finger</a></li>
+                           </ul>
+                        </ul>
+                        <!-- menu-list accordion-->
+                     </div>
+                     <!-- menu-container -->
                     <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fas fa-align-justify"></i>
                     </button>
@@ -200,6 +232,8 @@
 
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <!-- jQuery CDN - Hamburger Menu -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <!-- Popper.JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <!-- Bootstrap JS -->
