--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -77,7 +77,7 @@
                           <a href="#curtisSecret">Curtis's Secret</a>
                         </li>
                         <li>
-                          <a href="#strangRequest">Strang Request</a>
+                          <a href="#strangeRequest">Strang Request</a>
                         </li>
                         <li>
                           <a href="#daveysRattle">Davey's Rattle</a>
@@ -183,10 +183,95 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
                 <div class="container-fluid">
 
-                    <button type="button" id="sidebarCollapse" class="btn btn-dark">
-                        <i class="fas fa-align-left"></i>
-                        <span>Toggle Sidebar</span>
-                    </button>
+                     <div class="d-lg-none" id="menu-container">
+                       <div id="menu-wrapper">
+                          <div id="hamburger-menu"><span></span><span></span><span></span></div>
+                          <!-- hamburger-menu -->
+                       </div>
+                       <!-- menu-wrapper -->
+                       <ul class="menu-list accordion">
+                          <li id="nav1" class="menu-size"> 
+                              <a class="menu-link" href="index.html">Home</a>
+                          </li>
+                          <li id="nav2" class="menu-size"> 
+                           <a class="menu-link" href="#valinorMap">Valinor Map</a>
+                       </li>
+                          <!-- menu-submenu accordon-content-->
+                          <li id="nav3" class="toggle accordion-toggle"> 
+                             <span class="icon-plus"></span>
+                             <a class="menu-link" href="#">Quest</a>
+                          </li>
+                          <!-- accordion-toggle -->
+                          <ul class="menu-submenu accordion-content">
+                             <li><a class="head" href="#welcomeToAshenEmpires">Welcome to Ashen Empires</a></li>
+                             <li><a class="head" href="#kumbaPendant">Kumba's Pendant</a></li>
+                             <li><a class="head" href="#strangeFascination">Strange Fascination</a></li>
+                             <li><a class="head" href="#theNecklace">The Necklace</a></li>
+                             <li><a class="head" href="#ourLittleSpiderProblem">Our Little Spider Problem</a></li>
+                             <li><a class="head" href="#theRing">The Ring</a></li>
+                             <li><a class="head" href="#proof">Proof</a></li>
+                             <li><a class="head" href="#frumpTheCook">Frump the Cook</a></li>
+                             <li><a class="head" href="#cloaksToDieFor">Cloaks to Die For</a></li>
+                             <li><a class="head" href="#war">War</a></li>
+                             <li><a class="head" href="#curtisSecret">Curtis's Secret</a></li>
+                             <li><a class="head" href="#strangeRequest">Strange Request</a></li>
+                             <li><a class="head" href="#daveysRattle">Davey's Rattle</a></li>
+                             <li><a class="head" href="#aGoblinProblem">A Goblin Problem</a></li>
+                             <li><a class="head" href="#hellHathNoFury">Hell Hath No Fury</a></li>
+                             <li><a class="head" href="#creaturesOfDransik">Creatures of Dransik</a></li>
+                             <li><a class="head" href="#theAlchemistsApprentice">The Alchemist's Apprentice</a></li>
+                             <li><a class="head" href="#veratti">Veratti</a></li>
+                             <li><a class="head" href="#ancientMagic">Ancient Magic</a></li>
+                          </ul>
+                          <!-- menu-submenu accordon-content-->
+                           <li id="nav4" class="toggle accordion-toggle"> 
+                             <span class="icon-plus"></span>
+                             <a class="menu-link" href="#">Weapon Trainers</a>
+                          </li>
+                          <!-- accordion-toggle -->
+                          <ul class="menu-submenu accordion-content">
+                             <li><a class="head" href="#largeBladeTrainer">Large Blade</a></li>
+                             <li><a class="head" href="#bluntTrainer">Blunts</a></li>
+                             <li><a class="head" href="#smallBladesTrainer">Small Blades</a></li>
+                             <li><a class="head" href="#axeWeaponTrainer">Axe</a></li>
+                             <li><a class="head" href="#polearmsTrainer">Polearms</a></li>
+                             <li><a class="head" href="#unarmedCombatTrainer">Unarmed Combat</a></li>
+                             <li><a class="head" href="#archeryTrainer">Bows</a></li>
+                             <li><a class="head" href="#crossbowTrainer">Crossbows</a></li>
+                             <li><a class="head" href="#thrownWeaponsTrainer">Thrown</a></li>
+                          </ul>
+                          <!-- menu-submenu accordon-content-->
+                          <li id="nav5" class="toggle accordion-toggle"> 
+                           <span class="icon-plus"></span>
+                           <a class="menu-link" href="#">Mage Trainers</a>
+                        </li>
+                        <!-- accordion-toggle -->
+                        <ul class="menu-submenu accordion-content">
+                           <li><a class="head" href="#natureMageTrainer">Nature Mage Trainer</a></li>
+                           <li><a class="head" href="#bodyMageTrainer">Body Mage Trainer</a></li>
+                           <li><a class="head" href="#mindMageTrainer">Mind Mage Trainer</a></li>
+                           <li><a class="head" href="#soulMageTrainer">Soul Mage Trainer</a></li>
+                        </ul>
+                        <!-- menu-submenu accordon-content-->
+                        <li id="nav6" class="toggle accordion-toggle"> 
+                         <span class="icon-plus"></span>
+                         <a class="menu-link" href="#">TradeSkill Trainers</a>
+                      </li>
+                      <!-- accordion-toggle -->
+                      <ul class="menu-submenu accordion-content">
+                         <li><a class="head" href="#cookingTrainer">Cooking Trainer</a></li>
+                         <li><a class="head" href="#leatherworkingTrainer">Leatherworking Trainer</a></li>
+                         <li><a class="head" href="#blackSmithTrainer">Blacksmith Trainer</a></li>
+                         <li><a class="head" href="#carpentryTrainer">Carpentry Trainer</a></li>
+                         <li><a class="head" href="#tailoringTrainer">Tailoring Trainer</a></li>
+                         <li><a class="head" href="#farmingTrainer">Farming Trainer</a></li>
+                      </ul>
+                      <!-- menu-submenu accordon-content-->
+                    
+                       </ul>
+                       <!-- menu-list accordion-->
+                    </div>
+                    <!-- menu-container -->
                     <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fas fa-align-justify"></i>
                     </button>
@@ -1244,7 +1329,7 @@
                 <!-- Start of Strange Request -->
                 <div class="card bg-main half-width mb-5">
                   <div class="card-header">
-                    <h2 id="strangRequest" class="anchor text-center">Strange Request</h2>
+                    <h2 id="strangeRequest" class="anchor text-center">Strange Request</h2>
                   </div>
                   <div>
                     <div class="card-body">
@@ -3800,6 +3885,8 @@
 
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <!-- jQuery CDN - Hamburger Menu -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <!-- Popper.JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <!-- Bootstrap JS -->
