Added Never Stop and Stick Jab Twist

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -170,10 +170,10 @@
                           <a href="#stayBack">Stay Back</a>
                       </li>
                       <li>
-                          <a href="#"></a>
+                          <a href="#neverStop">Never Stop</a>
                       </li>
                       <li>
-                          <a href="#"></a>
+                          <a href="#stickJabTwist">Stick Jab Twist</a>
                       </li>
                   </ul>
                 </li>
@@ -250,8 +250,8 @@
                           <li><a class="head" href="#keepItSharp">Keep it Sharp</a></li>
                           <li><a class="head" href="#crushSkulls">Crush Skulls</a></li>
                           <li><a class="head" href="#stayBack">Stay Back</a></li>
-                          <li><a class="head" href="#"></a></li>
-                          <li><a class="head" href="#"></a></li>
+                          <li><a class="head" href="#neverStop">Never Stop</a></li>
+                          <li><a class="head" href="#stickJabTwist">Stick Jab Twist</a></li>
                          </ul>
                        </ul>
                        <!-- menu-list accordion-->
@@ -991,6 +991,156 @@
                 </div>
               </div>
               <!-- End of Stay Back -->
+              <div class="line"></div>
+              <!-- Start of Never Stop -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="neverStop" class="anchor text-center">Never Stop</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Combat <br>
+                              lvl 15 Unarmed Combat
+                          </td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Monsters</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Ox Juurnuhk
+                          </td>
+                          <td>
+                            Goblin Warriors (19)
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Never_Stop_Crude_Orcish_Punching_Daggers.png" alt="Crude Orcish Spear" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Never_Stop_Crude_Orcish_Punching_Daggers_Stats.png' alt='Crude Orcish Punching Daggers Stats'>">
+                            <img class="thumbnail-img" src="Images/BlackSwamp/" alt="Orcish Warrior Cape" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Stay_Back_Orcish_Warrior_Cape_Stats.png' alt='Orcish Warrior Cape Stats'>">
+
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/BlackSwamp/Never_Stop_Ox_Juurnuhk.png" alt="Ox Juurnuhk">
+                        Speak to <span class="light-red">Ox Juurnuhk</span>, he will only speak to you if you have 15 in your Unarmed Combat skill. If you are lvl 15 in your Unarmed Combat skill he will teach you the way of an Unarmed Combat user. 
+                        He will task you to kill 100 Goblin Warriors with the Crude Orcish Punching Daggers.
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Crude Orcish Punching Daggers</span></li>
+                        </ul>
+                        <hr>                                            
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Never Stop</span><span class="orange">, Ox Juurnuhk of Samad assigned you to pummel 100 Goblin Warriors with the Crude Orcish Punching Daggers.</span>
+                        <br>
+                        The best place to fight Goblin Warriors is around Goblin lake. <img class="monster-img" src="Images/BlackSwamp/Never_Stop_Goblin_Map_Location.png" alt="Goblin Map Location"> Head east out of Samad following the road southeast to the spawn gate.
+                        Go south from the spawn gate and you will be at Goblin Lake.
+                        As you defeat <span class="red">Goblin Warriors</span> <img class="monster-img" src="Images/NPC/Monsters/Goblin_Warrior.png" alt="Goblin Warrior"> you will be updated <span class="green">You have killed X Goblin Warriors for Ox Juurnuhk!</span>
+                        If you kill one with out the Crude Orcish Punching Daggers you will be updated with a warning, <span class="red">You must equip the Crude Orcish Punching Daggers to complete Ox's training.</span> Once you have killed 100 you will be updated.
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Never Stop</span><span class="orange">, Return to Ox Juurnuhk in Samad to collect your reward.</span>  
+                        Speak to Ox Juurnuhk he will reward you with the Orcish Warrior ???.
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Orcish Warrior ???</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>
+                        You have received training in the art of Unarmed Combat from Juurnuhk.
+                    </p>
+                        
+                  </div>
+                </div>
+              </div>
+              <!-- End of Never Stop -->
+              <div class="line"></div>
+              <!-- Start of Never Stop -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="stickJabTwist" class="anchor text-center">Stick Jab Twist</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Combat <br>
+                              lvl 15 Small Blades
+                          </td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Monsters</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Gar-Gar Mootarhk
+                          </td>
+                          <td>
+                            Goblin (16)
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Stick_Jab_Twist_Crude_Orcish_Dagger.png" alt="Crude Orcish Spear" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Stick_Jab_Twist_Crude_Orcish_Dagger_Stats.png' alt='Crude Orcish Dagger Stats'>">
+                            <img class="thumbnail-img" src="Images/BlackSwamp/" alt="Orcish Warrior Cape" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Stay_Back_Orcish_Warrior_Stats.png' alt='Orcish Warrior Stats'>">
+
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/BlackSwamp/Stick_Jab_Twist_Gar-Gar_Mootarhk.png" alt="Gar-GAr Mootarhk">
+                        Speak to <span class="light-red">Gar-Gar Mootarhk</span>, he will only speak to you if you have 15 in your Small Blades skill. If you are lvl 15 in your Small Blades skill he will teach you the way of a Small Blades user. 
+                        He will task you to kill 50 Goblins with the Crude Orcish Dagger.
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Crude Orcish Daggers</span></li>
+                        </ul>
+                        <hr>                                            
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Stick Jab Twist</span><span class="orange">, Stick 50 Goblins for Gar-Gar Mootarhk of Samad with the Crude Orcish Dagger.</span>
+                        <br>
+                        The best place to fight Goblin Warriors is around Goblin lake. <img class="monster-img" src="Images/BlackSwamp/Never_Stop_Goblin_Map_Location.png" alt="Goblin Map Location"> Head east out of Samad following the road southeast to the spawn gate.
+                        Go south from the spawn gate and you will be at Goblin Lake.
+                        As you defeat <span class="red">Goblins</span> <img class="monster-img" src="Images/NPC/Monsters/Goblin.png" alt="Goblin"> you will be updated <span class="green">You have killed X Goblins for Gar-Gar Mootarhk!</span>
+                        If you kill one with out the Crude Orcish Dagger you will be updated with a warning, <span class="red">You must equip the Crude Orcish Dagger to complete Gar-Gar's training.</span> Once you have killed 50 you will be updated.
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Stick Jab Twist</span><span class="orange">, Return to Gar-Gar Mootarhk in Samad to collect your reward.</span>  
+                        Speak to Gar-Gar Mootarhk he will reward you with the Orcish Warrior ???.
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Orcish Warrior ???</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>
+                        You have received training in the art of Small Blades from Mootarhk.
+                    </p>
+                        
+                  </div>
+                </div>
+              </div>
+              <!-- End of Never Stop -->
               <div class="line"></div>
 
 
