Added new patch notes

--- a/index.html
+++ b/index.html
@@ -103,6 +103,43 @@
             <h2 id="aePatchNotes" class="anchor">Ashen Empires Patch Notes</h2>
             <div class="body-line"></div>
             <article>
+              <small class="article-date">FujiQ 2/19/2021</small> <br>
+              <p>
+                <u>The Gathering Gloom</u> <br>
+                Deep in the jungle, a deomn stirs...will you and your party be brave enough to face the darkness? This update features another dungeon revamp for you to enjoy;
+                this time we worked on the New Royale Jungle Temple dungeon and dmon boss Athropiniax. New treasures await parties of brave explorers, including a quest line for 
+                3 exchangeable rings. This dungeon update features new Dexmage and Conmage gear sets as well as a few other glittering jewels... 
+                <br>
+                <br>
+                Other fixes since the update two weeks ago:
+                <ul>
+                  <li>Adjustment to the Horned One dungeon (level 2) mob drop rates</li>
+                  <li>Adjustment to drop rate of ink materials from lower level creatures</li>
+                  <li>Adjustment to Knight of Talazar event</li>
+                  <li>Light spell now lasts longer and has shorter cooldown to recast</li>
+                  <li>Skill bonuses to forging and carpentry now allows you to craft harder things</li>
+                  <li>Patrolling npcs will not stray as far from their path (including guards)</li>
+                  <li>Guards got a stat boost</li>
+                  <li>Adjustment to Chaos craftable gear stats for balancing</li>
+                  <li>Removed zombie pirates from upper portion of Roycroft island</li>
+                  <li>Adjusted Cyclops spawn on Roycroft (now includes Ancient cyclops)</li>
+                  <li>Adjusted Deathcap stats</li>
+                  <li>New Korelth now no longer has high level demon mobs</li>
+                  <li>Totem of Demonic Control can now be used on pvp servers</li>
+                </ul>
+              </p>
+              <p>
+                Chaos Fixes that are now applied to H/L: 
+                <ul>
+                  <li>Symboled Blade of Destruction adjust on special chance to strike</li>
+                  <li>Fireseeker adjust on special damage amount</li>
+                </ul>
+              </p>
+              <ul>
+                <li>Ryonkah's life steal damaged has been adjusted</li>
+              </ul>
+            </article> 
+            <article>
               <small class="article-date">FujiQ 2/10/2021</small> <br>
               <p>
                 (Chaos)
