Added new Images

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -663,7 +663,7 @@
                             Bograhk Dargarkh
                           </td>
                           <td>
-                            <img class="thumbnail-img" src="Images/BlackSwamp/" alt="" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/_Stats.png' alt=''>">
+                            <img class="thumbnail-img" src="Images/BlackSwamp/The_Art_of_Combat_Orcish_Warrior_Plate.png" alt="" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/The_Art_of_Combat_Orcish_Warrior_Plate_Stats.png' alt='Orcish Warrior Plate Stats'>">
                           </td>                        
                     </table>
 
@@ -686,7 +686,7 @@
 
                         <hr>
                         <ul>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green"></span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Orcish Warrior Plate</span></li>
                           <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience Pool <span class="light-red">experience may very</span></li>
                         </ul>
                         <hr>
@@ -1029,7 +1029,7 @@
                           </td>
                           <td>
                             <img class="thumbnail-img" src="Images/BlackSwamp/Never_Stop_Crude_Orcish_Punching_Daggers.png" alt="Crude Orcish Spear" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Never_Stop_Crude_Orcish_Punching_Daggers_Stats.png' alt='Crude Orcish Punching Daggers Stats'>">
-                            <img class="thumbnail-img" src="Images/BlackSwamp/" alt="Orcish Warrior Cape" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Stay_Back_Orcish_Warrior_Cape_Stats.png' alt='Orcish Warrior Cape Stats'>">
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Never_Stop_Orcish_Warrior_Boots.png" alt="Orcish Warrior Cape" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Never_Stop_Orcish_Warrior_Boots_Stats.png' alt='Orcish Warrior Boots Stats'>">
 
                           </td>                        
                     </table>
@@ -1052,10 +1052,10 @@
                         If you kill one with out the Crude Orcish Punching Daggers you will be updated with a warning, <span class="red">You must equip the Crude Orcish Punching Daggers to complete Ox's training.</span> Once you have killed 100 you will be updated.
                         <br>
                         <span class="green">QUEST UPDATE:</span><span class="red"> Never Stop</span><span class="orange">, Return to Ox Juurnuhk in Samad to collect your reward.</span>  
-                        Speak to Ox Juurnuhk he will reward you with the Orcish Warrior ???.
+                        Speak to Ox Juurnuhk he will reward you with the Orcish Warrior Boots.
                         <hr>
                         <ul>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Orcish Warrior ???</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Orcish Warrior Boots</span></li>
                           <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience Pool <span class="light-red">experience may very</span></li>
                         </ul>
                         <hr>
@@ -1104,7 +1104,7 @@
                           </td>
                           <td>
                             <img class="thumbnail-img" src="Images/BlackSwamp/Stick_Jab_Twist_Crude_Orcish_Dagger.png" alt="Crude Orcish Spear" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Stick_Jab_Twist_Crude_Orcish_Dagger_Stats.png' alt='Crude Orcish Dagger Stats'>">
-                            <img class="thumbnail-img" src="Images/BlackSwamp/" alt="Orcish Warrior Cape" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Stay_Back_Orcish_Warrior_Stats.png' alt='Orcish Warrior Stats'>">
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Stick_Jab_Twist_Orcish_Warrior_Greaves.png" alt="Orcish Warrior Greaves" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Stick_Jab_Twist_Orcish_Warrior_Greaves_Stats.png' alt='Orcish Warrior Greaves Stats'>">
 
                           </td>                        
                     </table>
@@ -1127,10 +1127,10 @@
                         If you kill one with out the Crude Orcish Dagger you will be updated with a warning, <span class="red">You must equip the Crude Orcish Dagger to complete Gar-Gar's training.</span> Once you have killed 50 you will be updated.
                         <br>
                         <span class="green">QUEST UPDATE:</span><span class="red"> Stick Jab Twist</span><span class="orange">, Return to Gar-Gar Mootarhk in Samad to collect your reward.</span>  
-                        Speak to Gar-Gar Mootarhk he will reward you with the Orcish Warrior ???.
+                        Speak to Gar-Gar Mootarhk he will reward you with the Orcish Warrior Greaves.
                         <hr>
                         <ul>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Orcish Warrior ???</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Orcish Warrior Greaves</span></li>
                           <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience Pool <span class="light-red">experience may very</span></li>
                         </ul>
                         <hr>
